<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    >
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonContainer"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <RelativeLayout
                android:id="@+id/titleBar"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="-10dp"
                android:layout_marginBottom="1dp">

                <ImageView
                    android:id="@+id/logoImage"
                    android:layout_width="210dp"
                    android:layout_height="130dp"
                    android:paddingLeft="7dp"
                    android:src="@drawable/title" />

                <ImageView
                    android:id="@+id/infoIcon"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/dot3" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mode1Container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <ImageView
                    android:id="@+id/mode1gif"
                    android:layout_width="match_parent"
                    android:layout_height="137dp"
                    android:visibility="gone"
                    android:src="@drawable/hoshijiro"
                    android:scaleType="centerCrop"/>

                <!-- original mode1Layout -->
                <LinearLayout
                    android:id="@+id/mode1Layout"
                    android:background="@drawable/rounded_transparent_background"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:padding="17dp"
                    android:layout_margin="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mode1Title"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:src="@drawable/m1"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="10dp"/>

                    <TextView
                        android:id="@+id/mode1Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_default"
                        android:text="@string/mode1_desc"
                        android:textSize="17sp"
                        android:paddingStart="10dp"
                        android:lineSpacingMultiplier="1.1"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mode2Container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <ImageView
                    android:id="@+id/mode2gif"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="137dp"
                    android:src="@drawable/hoshijiro"
                    android:scaleType="centerCrop"/>

                <!-- original mode1Layout -->
                <!-- layout_margin:stripe boarder width. -->
                <LinearLayout
                    android:id="@+id/mode2Layout"
                    android:background="@drawable/rounded_transparent_background"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:padding="17dp"
                    android:layout_margin="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mode2Title"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:src="@drawable/m2"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="10dp"/>

                    <TextView
                        android:id="@+id/mode2Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_default"
                        android:text="@string/mode2_desc"
                        android:textSize="17sp"
                        android:paddingStart="10dp"
                        android:lineSpacingMultiplier="1.1"/>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/textViewModeSelected"
                android:textColor="@color/text_color_default"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="12dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:paddingStart="20dp"
                android:text="@string/no_mode_selected"
                android:textSize="18sp" />



            <LinearLayout
                android:id="@+id/mode1GameInfo"
                android:background="@drawable/rounded_transparent_background"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:paddingEnd="18dp"
                android:paddingStart="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginBottom="20dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/leftViewLabel"
                    android:layout_width="0dp"
                    android:lineSpacingMultiplier="1.5"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/mode1_gameinfo"
                    android:textColor="@color/text_color_default"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/rightViewValue"
                    android:layout_width="0dp"
                    android:lineSpacingMultiplier="1.5"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text=""
                    android:textColor="@color/muzuku"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:textSize="16sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textViewStatus"
                android:textColor="@color/text_color_default"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_transparent_background"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:paddingEnd="18dp"
                android:paddingStart="25dp"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:singleLine="false"
                android:lineSpacingMultiplier="1.5"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/mode2Blockinfo"
                android:textColor="@color/text_color_default"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_transparent_background"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:paddingEnd="18dp"
                android:paddingStart="25dp"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:singleLine="false"
                android:lineSpacingMultiplier="1.5"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/serverInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/rounded_transparent_background"
                android:visibility="gone">



                <TextView
                    android:id="@+id/textViewServerInfo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="18sp"
                    android:textColor="@color/text_color_default"
                    android:padding="5dp"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/textViewIPPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/red_earth"
                    android:padding="5dp"
                    android:layout_below="@id/textViewServerInfo"
                    android:gravity="center_horizontal"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <ImageView
            android:id="@+id/gifBackground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:scaleType="fitXY"/>

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:text="@string/button_start"
            android:background="@drawable/rounded_transparent_background"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>